# awscript

./: .gitignore  CMakeLists.txt  Config.mk  Makefile  README.md  README.rst  Rules.mk  daedalus.bnf
data/: PC_Hero.d  class.d  codegen.d  comments.d  error.d  playground.d  precedence.d  test1.d
data/BPMod/Game/Triggers/: CycleTrigger.d  GameStart.d
data/G2MDK/Story/B_Story/: B_RaiseFightTalent.d
data/G2MDK/Story/NPC/: PC_Hero.d
include/aw/script/ast/: CallExpr.h  Expression.h  UnaryExpr.h  Visitor.h  declaration.h  expression.h  if_else_statement.h  node.h  statement.h  statement_block.h  visitor.h
include/aw/script/common/: types.h
include/daedalus/AST/: AST.h
include/daedalus/ast/: AssignmentExpr.h  BinaryExpr.h  CallExpr.h  ClassDeclaration.h  Declaration.h  Expression.h  FuncDeclaration.h  IdentifierExpr.h  Node.h  NumberExpr.h  Statement.h  StatementBlock.h  UnaryExpr.h  VariableDeclaration.h  Visitor.h
include/daedalus/lexer/: FileStream.h  Lexer.h  OctetStream.h  Stream.h  Token.h
include/daedalus/parser/: Parser.h
include/hrscript/ast/: AST.h  BinaryExpr.h  CallExpr.h  ClassDeclaration.h  Conditional.h  Declaration.h  Expression.h  FuncDeclaration.h  IdentifierExpr.h  IfElseStatement.h  Node.h  NumberExpr.h  Statement.h  StatementBlock.h  StringExpr.h  UnaryExpr.h  VariableDeclaration.h  Visitor.h
include/hrscript/codegen/: Backend.h  BackendLLVM.h  Codegen.h
include/hrscript/common/: string.h  types.h
include/hrscript/diagnostic/: Diagnostic.h  DiagnosticsEngine.h
include/hrscript/lexer/: FileStream.h  KeywordMap.h  Lexer.h  OctetStream.h  Stream.h  Token.h  TokenKinds.h
include/hrscript/parser/: OperatorPrecedence.h  Operators.h  Parser.h
include/hrscript/utility/: PrintToken.h  Printer.h
lang/: CMakeLists.txt
lang/include/aw/script/ast/: declaration.h  expression.h  foreign_block.h  identifier.h  linkage.h  mutability.h  number_base.h  operators.h  statement.h  type.h
lang/include/aw/script/ast/decl/: function.h  module.h  type.h  variable.h
lang/include/aw/script/ast/middle/: declaration.h  expression.h  module.h  statement.h
lang/include/aw/script/ast/stmt/: if_else_statement.h  statement_block.h
lang/include/aw/script/codegen/: backend.h  optimization_level.h
lang/include/aw/script/codegen/llvm/: backend_llvm.h
lang/include/aw/script/diag/: diagnostic.h  diagnostics_engine.h  error_t.h  messages.h
lang/include/aw/script/driver/: callbacks.h  main.h  options.h
lang/include/aw/script/ir/: operators.h  type.h
lang/include/aw/script/lexer/: lexer.h  source_buffer.h  source_manager.h  token.h  tokens.h
lang/include/aw/script/parser/: operators.h  parser.h
lang/include/aw/script/semantic/: dependency_resolver.h  module_map.h  module_tree.h  scope.h  semantic_analyzer.h
lang/include/aw/script/symtab/: scope.h  symbol_name.h  symbol_table.h
lang/include/aw/script/utility/: ast_printer_default.h  hard_alias.h  location.h  map.h  print_token.h  type_name.h  value_ptr.h  wrap.h
lang/source/ast/: function.c++  statement.c++
lang/source/codegen/llvm/: backend_llvm.c++  backend_llvm.h  gen_cast.c++  gen_variable.c++  llvm_helpers.h  optimizer_llvm.c++  optimizer_llvm.h
lang/source/diag/: diagnostics_engine.c++  messages.c++
lang/source/driver/: linker.c++  linker.h  main.c++
lang/source/lexer/: char_type.h  lexer.c++
lang/source/parser/: errors.h  foreign_module_parser.c++  foreign_module_parser.h  keywords.h  operators.c++  parser.c++  parser_decl.c++
lang/source/semantic/: context.c++  context.h  convert_to_middle.c++  convert_to_middle.h  dependency_resolver.c++  dependency_scanner.h  generic_visitor.h  module_tree.c++  resolve_dependencies.c++  resolve_references.c++  resolve_references.h  scope.c++  semantic_analyzer.c++  type_inference.c++  type_inference.h
lang/source/symtab/: symbol_table.c++
lang/source/utility/: ast_printer_default.c++
lang/tests/: CMakeLists.txt
lang/tests/lexer/: lexer.c++  parser.c++
lang/tests/parser/: comments.c++  parser.c++
lang/tests/semantic/: resolve_deps.c++
libs/: CMakeLists.txt
libs/backends/llvm/: CMakeLists.txt
libs/backends/llvm/source/: backend_llvm.c++  backend_llvm.h
libs/lang/: CMakeLists.txt
libs/lang/include/aw/script/ast/: declaration.h
libs/lang/include/aw/script/ast/decl/: class.h  variable.h
libs/lang/include/aw/script/codegen/: backend.h
libs/lang/include/aw/script/diag/: error_t.h  messages.h
libs/lang/include/aw/script/parser/: parser.h
libs/lang/source/codegen/: backend.c++
libs/lang/source/parser/: errors.h
libs/lang/source/symtab/: scope.c++
old/: parser.c++  parser.h  printer.c++  printer.h  string.h
old/ast/decl/: variable.h
old/ast/expr/: binary.h  identifier.h  number.h  string.h  unary.h
source/compiler/: Makefile  char_type.h  keyword_map.c++  lexer.c++  parser.c++
source/daedalus/: Lexer.cpp  Makefile  Parser.cpp
source/gothicstub/: Externals.cpp
source/hrscript/: KeywordMap.cpp  Lexer.cpp  Makefile  Parser.cpp
source/llvm/: Makefile
source/script/: Makefile  errors.h  parser.c++  source_buffer.c++
source/utils/: Makefile  Printer.cpp  printer.c++
stdlib/: print.aw  shared.aw  unique.aw  vector.aw
test/: CMakeLists.txt
test/codegen/: array.aw  array_of_structs.aw  chain.aw  dereference.aw  function.aw  pointer.aw
test/concepts/: iterable.aw
test/errors/: invalid_decls.aw  linebreaks.aw  not_allowed_here.aw  not_implemented_yet.aw  recovery.aw
test/modules/: common.aw  main.aw  vec.aw
test/syntax/: as.aw  associativity.aw  comments.aw  if.aw  operators.aw  precedence.aw  struct.aw  subscript.aw
tests/: LexerTest.cpp
tests/LexerTest/: LexerTest.cpp  Makefile
tests/ParserTest/: Makefile  ParserTest.cpp
tests/lexer_test/: Makefile  lexer_test.c++
tests/parser_test/: Makefile  parser_test.c++
tools/: CMakeLists.txt
tools/awlex/: CMakeLists.txt  awlex.c++
tools/awscriptc/: CMakeLists.txt  awscriptc.c++
tools/awtree/: CMakeLists.txt  ast_printer.h  ast_printer_awdoc.c++  ast_printer_awdoc.h  ast_printer_default.c++  ast_printer_default.h  awtree.c++
(+24 files in other folders)
